--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -22,7 +22,7 @@
         tools:layout_constraintLeft_creator="1"
         app:cardElevation="0dp"
         app:cardCornerRadius="4dp"
-        />
+        app:layout_constraintHorizontal_bias="0.33" />
 
     <ImageView
         android:layout_width="96dp"
@@ -59,15 +59,18 @@
 
     <TextView
         android:text="TextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
         android:layout_marginTop="8dp"
-        android:textSize="21sp"
+        android:maxLines="2"
+        android:textSize="16sp"
         android:id="@+id/title"
         app:layout_constraintLeft_toRightOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/genre"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toLeftOf="@+id/imageView2" />
 
 
     <Button style="@style/Widget.AppCompat.Button.Colored"
