Parcelable movie DescriptionActivity w/o mvp description layout raw

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.TransparentStatusBar">
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
     <style name="FullScreenDialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
