--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -5,17 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_collapseMode="pin"
-        app:layout_scrollFlags="scroll|enterAlways"
-        android:background="@color/colorPrimary" />
 
+    <ScrollView
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <android.support.constraint.ConstraintLayout
-            android:layout_marginTop="?attr/actionBarSize"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -23,93 +19,101 @@
                 android:id="@+id/image"
                 android:layout_width="0dp"
                 android:layout_height="192dp"
-                android:src="@mipmap/ic_launcher"
                 android:scaleType="centerCrop"
-                app:layout_constraintTop_toTopOf="parent"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:text="Action"
+                android:id="@+id/genre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_filled_corners"
-                android:id="@+id/genre"
-                android:padding="4dp"
-                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/shape_filled_corners"
+                android:padding="4dp"
+                android:text="Action"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/image" />
 
             <TextView
-                android:text="4/5"
+                android:id="@+id/rate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_filled_corners"
-                android:id="@+id/rate"
-                android:padding="4dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="@+id/image"
-                app:layout_constraintLeft_toLeftOf="@+id/image"
+                android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp" />
+                android:layout_marginTop="16dp"
+                android:background="@drawable/shape_filled_corners"
+                android:padding="4dp"
+                android:text="4/5"
+                app:layout_constraintLeft_toLeftOf="@+id/image"
+                app:layout_constraintTop_toTopOf="@+id/image" />
 
             <TextView
-                android:text="Adult"
+                android:id="@+id/text_adult"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_filled_corners"
-                android:id="@+id/text_adult"
-                android:padding="4dp"
-                app:layout_constraintRight_toLeftOf="@+id/genre"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                app:layout_constraintTop_toTopOf="@+id/genre"
-                app:layout_constraintBottom_toBottomOf="@+id/genre" />
+                android:background="@drawable/shape_filled_corners"
+                android:padding="4dp"
+                android:text="Adult"
+                app:layout_constraintBottom_toBottomOf="@+id/genre"
+                app:layout_constraintRight_toLeftOf="@+id/genre"
+                app:layout_constraintTop_toTopOf="@+id/genre" />
 
 
             <TextView
-                android:text="Budget :"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/budget"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/image"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginLeft="16dp" />
-
-            <TextView
-                android:text="Original language: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/language"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
+                android:text="Budget :"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/image" />
+
+            <TextView
+                android:id="@+id/language"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="Original language: "
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/budget" />
 
             <TextView
-                android:text="Overview"
+                android:id="@+id/text_overview"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/text_overview"
-                android:textAlignment="center"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/language"
                 android:layout_marginEnd="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="Overview"
+                android:textAlignment="center"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="16dp" />
+                app:layout_constraintTop_toBottomOf="@+id/language" />
 
 
         </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        app:layout_collapseMode="pin"
+        app:layout_scrollFlags="scroll|enterAlways" />
 
 
 </android.support.design.widget.CoordinatorLayout>
