--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"/>
+
 
     <ScrollView
-        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -59,8 +65,11 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:background="@drawable/shape_filled_corners"
+                android:backgroundTint="@android:color/holo_red_dark"
                 android:padding="4dp"
+                android:visibility="gone"
                 android:text="Adult"
+                android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="@+id/genre"
                 app:layout_constraintRight_toLeftOf="@+id/genre"
                 app:layout_constraintTop_toTopOf="@+id/genre" />
@@ -107,13 +116,6 @@
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        app:layout_collapseMode="pin"
-        app:layout_scrollFlags="scroll|enterAlways" />
 
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
