--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -42,11 +42,15 @@
         />
 
     <TextView
-        android:text="Action"
+        android:text="6.5"
         android:background="@drawable/shape_filled_corners"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dp"
+        android:paddingRight="6dp"
+        android:paddingLeft="6dp"
+        android:paddingBottom="2dp"
+        android:paddingTop="2dp"
+        android:textAlignment="center"
         android:id="@+id/genre"
         app:layout_constraintTop_toTopOf="@+id/cardView"
         app:layout_constraintLeft_toRightOf="@+id/image"
